# poetryproject2

./: README.md  index.html  pyproject.toml
.github/workflows/: .allure-report.yaml
26/: index.html
26/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
26/export/: influxDbData.txt  prometheusData.txt
26/history/: history-trend.json  retry-trend.json
26/widgets/: duration.json  executors.json  severity.json  summary.json
27/: index.html
27/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
27/export/: influxDbData.txt  prometheusData.txt
27/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
27/widgets/: duration-trend.json  executors.json  severity.json  status-chart.json  summary.json
28/: index.html
28/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
28/export/: influxDbData.txt  prometheusData.txt
28/history/: categories-trend.json  history.json
28/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
29/: index.html
29/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
29/export/: influxDbData.txt  prometheusData.txt
29/history/: categories-trend.json  history.json
30/: index.html
38/: index.html
39/: index.html
40/: index.html
41/: index.html
last-history/: categories-trend.json  duration-trend.json  history.json
tests/: test_first.py  test_second.py
(+178 files in other folders)
