[tool.poetry]
name = "poetryproject2"
version = "0.1.0"
description = ""
authors = ["Pooja Tiwari <pooja.tiwari@contractoralefeducation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.1.1"
allure-pytest = "^2.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
